src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Convert into opportunity</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Operations action</fullName>
        </values>
        <values>
            <fullName>Sales Qualification</fullName>
        </values>
        <values>
            <fullName>Tender Received</fullName>
        </values>
        <values>
            <fullName>Tender Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ABN__c</fullName>
        <inlineHelpText>What&apos;s your company ABN?</inlineHelpText>
        <label>ABN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Altima__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altima</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Status_Changed__c</fullName>
        <label>Date Status Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_do_you_intend_to_purhcase__c</fullName>
        <label>How do you intend to purhcase?</label>
        <picklist>
            <picklistValues>
                <fullName>Outright Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_would_you_like_to_be_contacted__c</fullName>
        <label>How would you like to be contacted?</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Juke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Juke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navara_D22__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navara D22</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navara_D40__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navara D40</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nurture_Follow_Up_Date__c</fullName>
        <description>What is the date that you are expected to follow up this Lead?</description>
        <label>Nurture Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patrol_Cab_Chassis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patrol Cab Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>I have read and agree to the Privacy Policy and authorise Nissan Motor Co. (Australia) to use the data as outlined in the Privacy Policy.</description>
        <label>Privacy Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Yes , I would like to be kept informed of future news and events from Nissan.</description>
        <inlineHelpText>Yes , I would like to be kept informed of future news and events from Nissan.</inlineHelpText>
        <label>Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pulsar_Hatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pulsar Hatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <inlineHelpText>Why did this lead not convert into an Opportunity?</inlineHelpText>
        <label>Reason for Closure</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Unable to contact Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product not suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to a competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABN Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Duration__c</fullName>
        <formula>Today() -  Date_Status_Changed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tender_Follow_up_Date__c</fullName>
        <inlineHelpText>Tender has been submitted and this is the date that that the Tender needs to be followed up on.</inlineHelpText>
        <label>Tender Follow up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_s_your_fleet_size__c</fullName>
        <inlineHelpText>How large is your current fleet?</inlineHelpText>
        <label>What&apos;s your fleet size?</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_do_you_intend_to_buy__c</fullName>
        <description>When do you intend to purchase your next vehicle?</description>
        <label>When do you intend to buy?</label>
        <picklist>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>RYI_SALSAC</fullName>
        <active>true</active>
        <businessProcess>Default Lead Process</businessProcess>
        <description>Register your Interest - Salary Sacrifice</description>
        <label>RYI - SALSAC</label>
    </recordTypes>
    <recordTypes>
        <fullName>RYI_Tool_of_Trade</fullName>
        <active>true</active>
        <businessProcess>Default Lead Process</businessProcess>
        <description>Register your Interest - Tool of Trade</description>
        <label>RYI - Tool of Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Evaluation_Vehicle</fullName>
        <active>true</active>
        <businessProcess>Default Lead Process</businessProcess>
        <description>Request an Evaluation Vehicle</description>
        <label>Request - Evaluation Vehicle</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LD01_Nurture_Follow_Up_Required</fullName>
        <active>true</active>
        <description>If lead Status is set to Nurture and Nurture Follow Up date field is blank or less than or equal to TODAY then field needs to be updated</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Nurture&quot;),
    OR(
       ISBLANK(Nurture_Follow_Up_Date__c),
       Nurture_Follow_Up_Date__c &lt;= TODAY()
       )
    )</errorConditionFormula>
        <errorDisplayField>Nurture_Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Your Nurture Follow Up Date must have a value and not be equal or less than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LD02_Tender_Follow_Up_Required</fullName>
        <active>true</active>
        <description>If lead Status is set to Tender Submitted and Tender Follow Up date field is blank or less than or equal to TODAY then field needs to be updated</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Tender Submitted&quot;),
    OR(
       ISBLANK(Tender_Follow_up_Date__c),
       Tender_Follow_up_Date__c &lt;= TODAY()
       )
    )</errorConditionFormula>
        <errorDisplayField>Tender_Follow_up_Date__c</errorDisplayField>
        <errorMessage>Your Tender Follow Up Date must have a value and not be equal or less than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LD03_Convert_Into_Opportunity</fullName>
        <active>true</active>
        <description>If the &quot;Ready to Convert&quot; checkbox is ticked, then status must = Convert into Opportunity and vice versa</description>
        <errorConditionFormula>OR(
   AND(
       Ready_to_Convert__c = True,
       NOT(ISPICKVAL(Status, &quot;Convert into Opportunity&quot;))
       ),
   AND(
       Ready_to_Convert__c = False,
       ISPICKVAL(Status, &quot;Convert into Opportunity&quot;)
       )
   )</errorConditionFormula>
        <errorMessage>You cannot set a lead as ready to convert without the Status being at &quot;Convert into Opportunity&quot; AND the Ready to Convert checkbox being ticked true.</errorMessage>
    </validationRules>
</CustomObject>